src/app/modules/home/components/tutorials/tutorials.component.scss
@import "themes";

.tutorial {

	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin-bottom: 2rem;

	@media (max-width: 767px) {
		flex-direction: column;
		align-items: center;
		text-align: center;
	}

	article {
		width: 50%;
		@media (max-width: 767px) {
			width: 100%;
		}

		h3 {
			margin-top: 0;
			margin-bottom: 0;
			@media (max-width: 767px) {
				margin: 1rem;
			}
			font-weight: normal;
			font-size: 2rem;
		}
	}

	.iframe-container-container {
		width: 50%;
		margin-right: 2rem;

		@media (max-width: 767px) {
			width: 100%;
			margin-right: 0;
		}
	}

	.iframe-container {
		width: 100%;
		padding-bottom: 56.25%;
		height: 0;
	}

	.iframe-container iframe {
		width: 100%;
		height: 100%;
		position: absolute;
		top: 0;
		left: 0;
	}
}

img {
	width: 100%;
}

